testsuite/tests/backpack/should_fail/bkpfail40.bkp
unit p where
    signature A where
        class C a where
            f :: a -> a
            f x = x
